# lamodin

./: Cargo.toml  LICENSE  README.md
src/: archive.rs  cache.rs  downloader.rs  error.rs  lib.rs
src/api/: asset.rs  author.rs  mod.rs  reaction.rs  version.rs
src/api/blocking/: mod.rs
src/launcher/: lutris.rs  mod.rs  steam.rs
src/modifier/: mod.rs  proton.rs  wine.rs
