[package]
name = "purs"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "4.0.0"
futures-util = "0.3.21"
tar = "0.4.38"
log = "0.4.14"

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls", "stream", "blocking"]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.79"
default-features = false
features = ["alloc"]

[dev-dependencies]
tokio-test = "0.4.2"